--- a/navbar.html
+++ b/navbar.html
@@ -35,14 +35,14 @@
         }
         .social ul li:hover{
             transform: translate(100px,0);
-            background: #f4096c;
+            background: black;
 
         }
         .social ul li:hover a{
             color: white;
         }
         .social ul li:hover i{
-            color: #f4096c;
+            color:black;
             background: white;
             transform: rotate(360deg);
             transition: all 1s;
