--- a/navbar.html
+++ b/navbar.html
@@ -74,6 +74,7 @@
                     <li><a href="">Blog<i class="fa fa-pencil-alt fa"></i></a></li>
                     <li><a href="#">Resources<i class="fa fa-paperclip fa"></i></a></li>
                     <li><a href="#">Settings<i class="fa fa-cog fa"></i></a></li>
+                     <li><a href="www.us.com/contactus">Contact us<i class="fa fa-cog fa"></i></a></li>
         
                 </ul>
             </nav>
